# reloop-hub

./: .env.example  .env.test.example  .gitattributes  .gitignore  README.md  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: database-ci.yml
alembic/: env.py
alembic/versions/: 1562e08ca875_enforce_one_open_return_session_per_user.py  7ef98cb4e30a_create_initial_database_schema.py  85c4b02d47a1_harden_business_invariants.py  c3a90f17b6e2_unify_fastapi_backend.py  d81f4a6b2c09_add_bottle_cleanliness_score.py
app/: api_errors.py  dependencies.py  main.py  realtime.py  schemas.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  base.py  bottle_transaction.py  collection_route.py  enums.py  hub.py  pickup.py  (+10 more)
docs/: backend-completion-2026-07-13.md  backend-hardening-2026-07-12.md  dashboard-and-esg.md  database.md  demo-dataset.md  unified-backend.md
fastapi-backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
fastapi-backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  realtime.py  schemas.py  security.py  seed.py
fastapi-backend/app/routers/: auth.py  deposits.py  hubs.py  reports.py  routes.py  traceability.py  users.py
fastapi-backend/app/services/: reporting.py  routing.py
fastapi-backend/tests/: conftest.py  test_api_flow.py
frontend/: .env.example  MERGE_GUIDE.md  README.md  index.html  package-lock.json  package.json
scripts/: check_database.py  prepare_test_database.py  seed_database.py  seed_demo_dataset.py
tests/: conftest.py
(+77 files in other folders)
