[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "reloop-backend"
version = "1.0.0"
description = "FastAPI backend for the ReLoop Smart RVM reverse-logistics platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic-settings>=2.7,<3",
  "email-validator>=2.2,<3",
  "PyJWT>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<9", "pytest-cov>=6,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
